Thu Sep 25 17:37:19 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Add comment explaining why I'm bothering replacing autoheader
          templates in this file.

        * m4/acinclude.m4:
        * m4/config_h.m4:

          Move ACE_HAS_LLSEEK, ACE_HAS_LSEEK64,
          ACE_LACKS_LLSEEK_PROTOTYPE, and ACE_LACKS_LSEEK64_PROTOTYPE
          autoheader templates to ACE_CHECK_LSEEK64 feature test macro.

        * configure.ac:
        * m4/config_h.m4:

          Replace use of autoheader templates with AC_DEFINE macro's third
          argument for ACE_LACKS_CONDATTR_PSHARED,
          ACE_LACKS_MUTEXATTR_PSHARED, and ACE_LACKS_RWLOCKATTR_PSHARED
          feature tests.

Thu Sep 25 16:45:16 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Remove feature test and autoheader template for
          ACE_LACKS_PLACEMENT_OPERATOR_NEW, as it is no longer used.

Thu Sep 25 16:23:26 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Replace ~50 lines of open code with simple call to AC_CHECK_TYPE
          with ACE_DEFINE with a third argument for the ACE_LACKS_SEMBUF_T
          feature test.

          Move feature test for ACE_HAS_BYTESEX_H so it's adjacent to the
          test for ACE_HAS_BYTESWAP_H.

Thu Sep 25 13:58:48 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/acinclude.m4:

          Remove ACE_CHECK_STRUCT and ACE_TRY_COMPILE_STRUCT autoconf
          macros.  All use has been replaced by the standard autoconf
          AC_CHECK_TYPE macro.

        * configure.ac:
        * m4/config_h.m4:

          Replace use of ACE_CHECK_STRUCT with AC_CHECK_TYPE, and the use
          of AH_TEMPLATE with AC_DEFINE with a third argument for the
          ACE_HAS_PRUSAGE_T, ACE_LACKS_STRRECVFD, ACE_LACKS_SIGACTION,
          ACE_LACKS_SIGSET, and ACE_LACKS_UTSNAME_T feature tests.
