@@ -1,3 +1,11 @@
+Thu Sep 25 18:27:53 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * m4/config_h.m4:
+
+          Remove ACE_LACKS_STRPTIME and ACE_LACKS_SI_ADDR autoheader
+          templates.  We already use the AC_DEFINE macros third argument
+          for the descriptive text in the cooresponding feature tests.
+
 Thu Sep 25 17:37:19 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * m4/config_h.m4:
